# complicated-project-with-extension

./: .gitignore  README  pyproject.toml  run_local_uv_test.sh  setup.py
.github/workflows/: build-and-upload.yaml
cpwe/: foo.py  isl.pxd
ext/: foo.pxd
tests/: test_local_uv_project_from_scratch.sh
