[build-system]
requires = ["setuptools", "cython", "cibuildwheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpwe"
version = "v42"

[tool.setuptools.package-data]
"cpwe" = ["isl.pxd"]

[tool.setuptools.packages.find]
include = ["cpwe"]

# [tool.setuptools]
# ext-modules = [
#   {name = "cpwe.foo", sources = ["cpwe/foo.py"]}
# ]

[tool.cibuildwheel]
before-all = "uname -a"
build = "cp313-manylinux_x86_64"