[build-system]
requires = ["setuptools", "cython", "cibuildwheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpwe"
version = "v42"

[tool.setuptools.packages.find]
include = ["cpwe", "third_party"]

[tool.setuptools.package-data]
"cpwe" = ["isl.pxd"]
"third_party" = ["install.sh", "isl.bundle"]

# [tool.setuptools]
# ext-modules = [
#   {name = "cpwe.foo", sources = ["cpwe/foo.py"]}
# ]

[tool.cibuildwheel]
build-frontend="build[uv]"
before-all = "./third_party/install.sh"
build = "cp313-manylinux_x86_64"
manylinux-x86_64-image = "manylinux-mod"